--- a/web sites/Readme
+++ b/web sites/Readme
@@ -1,3 +1,6 @@
 List of Web sites 
 
-1.  Aviation Weather Center Search online METARS
+1.  https://aviationweather.gov/    Aviation Weather Center Search online METARS 
+2.   https://www.faasafety.gov/  
+3.   https://www.faa.gov/pilots/safety
+4.  https://www.1800wxbrief.com/Website/#!/   1800WXBRIEF.com  
