--- a/web sites/Readme
+++ b/web sites/Readme
@@ -5,3 +5,5 @@ List of Web sites
 3.   https://www.faa.gov/pilots/safety
 4.  https://www.1800wxbrief.com/Website/#!/   1800WXBRIEF.com  
 5.  https://www.airportview.net/weather/   As METAR for airports search with dewpoint and Barometric TREND Chart
+6.  https://www.calculator.net/dew-point-calculator.html   Calculate Relative Humidity.  Clear, calculator to begin, use Temperature and Dew Point from METAR info.
+
