--- a/web sites/Readme
+++ b/web sites/Readme
@@ -6,4 +6,5 @@ List of Web sites
 4.  https://www.1800wxbrief.com/Website/#!/   1800WXBRIEF.com  
 5.  https://www.airportview.net/weather/   As METAR for airports search with dewpoint and Barometric TREND Chart
 6.  https://www.calculator.net/dew-point-calculator.html   Calculate Relative Humidity.  Clear, calculator to begin, use Temperature and Dew Point from METAR info.
+7.  https://aviationweather.gov/data/pirep/?id=KSEA&distance=200&age=3&decoded=yes   PIREPs for Seattle Radius 200 miles last 3 hours.
 
